proj0/tests/correct/test1.inp
* C BETA III IV I CCBF
HIGH DARE