proj0/tests/error/nonfixed.inp
* B II III I IV SDFD
SDFDSFD